# linux-sec-home-command-center

./: .gitignore  Cargo.toml  LICENSE  NOTICE  README.md  README_EN.md  README_PTBR.md
.cargo/: config.toml
backend_api/: Cargo.toml
backend_api/src/: lib.rs  main.rs
backend_api/src/api/: dbus_client.rs  mod.rs  router.rs  server.rs
backend_api/src/auth/: middleware.rs  mod.rs  pam_auth.rs  rate_limit.rs  session.rs
backend_api/src/correlator/: baseline.rs  engine.rs  mod.rs  normalizer.rs  response.rs
backend_api/src/db/: events.rs  migrations.rs  mod.rs  rules.rs  scans.rs  schema.rs  tools.rs
backend_api/src/ironclaw/: context.rs  inference.rs  mod.rs
backend_api/src/tools/: adapter.rs  health.rs  lifecycle.rs  mod.rs  orchestrator.rs  plan.rs
backend_api/src/tools/adapters/: aide.rs  auditd.rs  clamav.rs  crowdsec.rs  dnscrypt.rs  falco.rs  firejail.rs  firewall.rs  gitsecrets.rs  lynis.rs  mac.rs  mod.rs  opensnitch.rs  osquery.rs  quarantine.rs  rootkit.rs  usbguard.rs
frontend/: index.html  package-lock.json  package.json  postcss.config.js  svelte.config.js  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.svelte  app.css  main.ts  vite-env.d.ts
frontend/src/components/: AuthGate.svelte  DashboardShell.svelte  FixProgressPanel.svelte  LHCCAgent.svelte  OfflineIndicator.svelte  ParanoiaModeIndicator.svelte  Sidebar.svelte
frontend/src/lib/: types.ts
frontend/src/lib/api/: client.ts  sse.ts
frontend/src/lib/stores/: app.ts  events.ts  fixes.ts  security.ts
frontend/src/routes/: ConnectionMap.svelte  Dashboard.svelte  EventTimeline.svelte  FirewallPanel.svelte  HardeningWizard.svelte  HealthPanel.svelte  ReportsPanel.svelte  ScanPanel.svelte  SettingsPanel.svelte
privileged_daemon/: Cargo.toml
privileged_daemon/src/: dbus_service.rs  integrity.rs  integrity_hashes.rs  lib.rs  main.rs  service.rs  whitelist.rs
scripts/: fix-and-install.sh  install-desktop.sh  launcher.sh  scan-server.js  setup-real.sh  start.sh  stop.sh
shared/: Cargo.toml
shared/src/: config.rs  dbus.rs  distro.rs  errors.rs  exec.rs  lib.rs  logging.rs  types.rs
