[workspace]
members = [
    "backend_api",
    "privileged_daemon",
    "shared",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Apache-2.0"
authors = ["catitodev"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP server
hyper = { version = "1", features = ["server", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["tokio", "server-auto"] }
http-body-util = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# D-Bus IPC
zbus = { version = "4", default-features = false, features = ["tokio"] }

# Database
rusqlite = { version = "0.31", features = ["bundled-sqlcipher"] }

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-journald = "0.3"

# Configuration
toml = "0.8"

# Async traits
async-trait = "0.1"

# Cryptographic hashing
sha2 = "0.10"

# Desktop notifications
notify-rust = "4"

# Property-based testing
proptest = "1"
