[package]
name = "backend_api"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Unprivileged backend API server for the Linux Security Home Command Center"

[[bin]]
name = "backend-api"
path = "src/main.rs"

[features]
default = []
pam = ["dep:pam"]

[dependencies]
shared = { path = "../shared" }
tokio = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
http-body-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
zbus = { workspace = true }
rusqlite = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-journald = { workspace = true }
toml = { workspace = true }
async-trait = { workspace = true }
pam = { version = "0.8", optional = true }
notify-rust = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
