[package]
name = "privileged_daemon"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Privileged daemon (root) for the Linux Security Home Command Center — executes whitelisted operations via D-Bus"

[[bin]]
name = "privileged-daemon"
path = "src/main.rs"

[dependencies]
shared = { path = "../shared" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
zbus = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-journald = { workspace = true }
toml = { workspace = true }

sha2 = { workspace = true }
notify-rust = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tempfile = "3"
