[package]
name = "shared"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Shared types, errors, and D-Bus interface definitions for the Linux Security Home Command Center"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-journald = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
